<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="@color/chartBackground"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/avgTemp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/avg_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:text="@string/celsius"
                android:textColor="@color/chartGridLine"
                android:textSize="30dp" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:background="@color/chartGridLine">

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/max"
                    android:textColor="@color/maxTemperature"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/max_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="26dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/celsius"
                    android:textColor="@color/chartGridLine"
                    android:textSize="18dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/min"
                    android:textColor="@color/minTemperature"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/min_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="26dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/celsius"
                    android:textColor="@color/chartGridLine"
                    android:textSize="18dp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/chartGridLine"></FrameLayout>

    <LinearLayout
        android:layout_width="140dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/date"
                    android:layout_centerInParent="true"
                    android:textSize="20dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="5dp"
                android:background="@color/chartGridLine"></LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/avgHumid"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/avg_humid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="30dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/rh"
                    android:textColor="@color/chartGridLine"
                    android:textSize="20dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>